--- a/style.css
+++ b/style.css
@@ -20,8 +20,18 @@ li {
 	height: 100%;
 }
 
-.slide {
-
+.slide { /*Styles used by both buttons*/
+	width: 50px;
+	height: 50px;
+	line-height: 50px; /*Vertical centre the text*/
+	text-align: center;
+	font-size: 1.4em;
+	border: 2px solid black;
+	border-radius: 50px; /*This makes the buttons circular*/
+}
+.slide:hover {
+	cursor: pointer;
+	background-color: lightgrey;
 }
 
 .next {
