--- a/style.css
+++ b/style.css
@@ -20,6 +20,12 @@ li {
 	height: 100%;
 }
 
+img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover; /*Maintain the image aspect ratio*/
+}
+
 .slide { /*Styles used by both buttons*/
 	width: 50px;
 	height: 50px;
