--- a/style.css
+++ b/style.css
@@ -5,9 +5,11 @@
 	box-sizing: border-box;
 }
 
-.featured {
+.carousel {
 	width: 100%;
 	height: 600px; /*Change to adjust slider height*/
+	position: relative; /*Sets this container to be the one everything is positioned to*/
+	overflow: hidden;
 }
 
 ol {
@@ -36,8 +38,13 @@ img {
 	line-height: 50px; /*Vertical centre the text*/
 	text-align: center;
 	font-size: 1.4em;
+	background-color: white;
 	border: 2px solid black;
 	border-radius: 50px; /*This makes the buttons circular*/
+	position: absolute;
+	bottom: 20px;
+	z-index: 10; /*These are the top-most objects*/
+
 }
 .slide:hover {
 	cursor: pointer;
@@ -45,13 +52,13 @@ img {
 }
 
 .next {
-	
+	right: 20px;
 }
 .next:after {
 	content: '\003e';
 }
 .back {
-
+	right: 100px;
 }
 .back:after {
 	content: '\003c';
