--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/*-- BASIC SETUP --*/
 * {
 	padding: 0;
 	border: 0;
@@ -5,6 +6,7 @@
 	box-sizing: border-box;
 }
 
+/*-- CAROUSEL SETUP --*/
 .carousel {
 	width: 100%;
 	height: 600px; /*Change to adjust slider height*/
@@ -63,3 +65,5 @@ img {
 .back:after {
 	content: '\003c';
 }
+
+/*-- SLIDING SETUP --*/
